# pomdp

./: .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  Makefile.in  NAMESPACE  NEWS.md  README.Rmd  README.md  configure  configure.ac  pomdp.Rproj  pomdp.bib
R/: AAA_check_installed.R  AAA_imports.R  AAA_package.R  AAA_pomdp-package.R  AAA_shorten.R  AAAdatasets.R  Cliff_walking.R  DynaMaze.R  MDP.R  MDP_policy_funcitons.R  MDP_policy_functions.R  Maze.R  POMDP.R  POMDP_accessors.R  POMDP_file_examples.R  POMDP_model.R  RcppExports.R  RussianTiger.R  Tiger.R  Windy_gridworld.R  accessors.R  accessors_observations.R  accessors_reward.R  accessors_trans_obs.R  accessors_transactions.R  action.R  actions.R  add_policy.R  alpha.R  belief.R  belief.proportions.R  check_and_fix_MDP.R  colors.R  estimate_belief_for_nodes.R  foreach_helper.R  gridworld.R  igraph_fix.R  initial.node.R  make_partially_observable.R  matrix_extractions.R  (+39 more)
Work/: lex.l  lex.yy.c  parser.y  pomdp-tools-main.c  pomdp-tools-options.h  utils.c
Work/data/: createTigerProblem.R  create_Three_doors.R  create_Tiger.R
Work/sarsop/: solve_SARSOP.R
data/: Cliff_walking.rda  DynaMaze.rda  Maze.rda  RussianTiger.rda  Three_doors.rda  Tiger.rda  TigerProblem.rda  Windy_gridworld.rda
data_src/: create_Cliff_walking.R  create_DynaMaze.R  create_Russian_Tiger.R  create_Three_doors.R  create_Tiger.R  create_Windy_gridworld.R  line_maze.R
inst/: CITATION  pomdp-solve
inst/examples/: light_maze.POMDP  shuttle_95.POMDP
man/: Cliff_walking.Rd  DynaMaze.Rd  MDP.Rd  MDP2POMDP.Rd  MDP_policy_functions.Rd  Maze.Rd  POMDP.Rd  POMDP_accessors.Rd  POMDP_example_files.Rd  RussianTiger.Rd  Tiger.Rd  TigerProblem.Rd  Windy_gridworld.Rd  accessors.Rd  action.POMDP.Rd  actions.Rd  add_policy.POMDP.Rd  add_policy.Rd  alpha.Rd  belief.Rd  belief.proportions.Rd  colors.Rd  estimate_belief_for_nodes.Rd  gridworld.Rd  initial.node.Rd  matrix_extractions.Rd  model.Rd  optimal_action.Rd  pg.Rd  plot.POMDP.Rd  plot_belief_space.Rd  plot_policy_graph.Rd  plot_value_function.Rd  policy.POMDP.Rd  policy.Rd  policy_graph.Rd  pomdp-package.Rd  pomdp.Rd  projection.Rd  reachable_and_absorbing.Rd  (+21 more)
src/: Makefile  Makefile.am  Makefile.in  Makefile.win  Makevars  Makevars.win  POMDP.cpp  POMDP.h  RcppExports.cpp  RcppSparse.h  alpha.c  belief-state.h  command-line.c  dgCMatrix.h  double-vector.c  enumeration.c  enumeration.h  fg-params.c  fg-params.h  finite-grid.c  finite-grid.h  global.c  global.h  index-list.c  install.libs.R  laspack-util.c  laspack-util.h  linear-support.h  lp-interface.c  main.c  math.cpp  math.h  mcgs.c  mcgs.h  model.cpp  model.h  params.c  pg-eval.c  pg-eval.h  pg.c  (+25 more)
src/.deps/: pomdp_fg-alpha.Po  pomdp_fg-associative-array.Po  pomdp_fg-belief-state.Po  pomdp_fg-belief.Po  pomdp_fg-cmd-line.Po  pomdp_fg-command-line.Po  pomdp_fg-common.Po  pomdp_fg-config-file.Po  pomdp_fg-cross-sum.Po  pomdp_fg-double-vector.Po  pomdp_fg-enumeration.Po  pomdp_fg-fg-params.Po  pomdp_fg-finite-grid.Po  pomdp_fg-global.Po  pomdp_fg-inc-prune.Po  pomdp_fg-linear-support.Po  pomdp_fg-lp-interface.Po  pomdp_fg-mcgs.Po  pomdp_fg-neighbor.Po  pomdp_fg-params.Po  pomdp_fg-parsimonious.Po  pomdp_fg-pg.Po  pomdp_fg-pomdp-fg-main.Po  pomdp_fg-pomdp-fg-options.Po  pomdp_fg-pomdp-fg.Po  pomdp_fg-pomdp-solve-options.Po  pomdp_fg-pomdp-solve.Po  pomdp_fg-pomdp.Po  pomdp_fg-program-options.Po  pomdp_fg-projection.Po  pomdp_fg-random.Po  pomdp_fg-region.Po  pomdp_fg-signal-handler.Po  pomdp_fg-sim.Po  pomdp_fg-stats.Po  pomdp_fg-timing.Po  pomdp_fg-two-pass.Po  pomdp_fg-value-function.Po  pomdp_fg-vertex-enum.Po  pomdp_fg-witness.Po  (+78 more)
src/laspack/: Makefile  Makefile.am  Makefile.in  eigenval.c  eigenval.h  elcmp.h  errhandl.c  errhandl.h  factor.c  factor.h  itersolv.c  itersolv.h  lastypes.h  matrix.c  matrix.h  mlsolv.c  mlsolv.h  operats.c  operats.h  precond.c  precond.h  qmatrix.c  qmatrix.h  rtc.c  rtc.h  vector.c  vector.h  version.h
src/laspack/.deps/: liblaspack_a-eigenval.Po  liblaspack_a-errhandl.Po  liblaspack_a-factor.Po  liblaspack_a-itersolv.Po  liblaspack_a-matrix.Po  liblaspack_a-mlsolv.Po  liblaspack_a-operats.Po  liblaspack_a-precond.Po  liblaspack_a-qmatrix.Po  liblaspack_a-rtc.Po  liblaspack_a-vector.Po
src/lp-solve/: Makefile  Makefile.am  Makefile.in  Makefile.win  lex.c  lex.l  lp.c  lpkit.h  read.c  read.h  solve.c
src/lp-solve/.deps/: liblpk_a-debug.Po  liblpk_a-hash.Po  liblpk_a-lex.Po  liblpk_a-lp.Po  liblpk_a-lpkit.Po  liblpk_a-presolve.Po  liblpk_a-read.Po  liblpk_a-solve.Po
src/mdp/: Makefile  Makefile.am  Makefile.in  mdp.c  mdp.h  parse_err.c  parse_err.h  parser.c  parser.h  parser.y  sparse-matrix.c
src/mdp/.deps/: libmdp_a-imm-reward.Po  libmdp_a-mdp.Po  libmdp_a-parse_err.Po  libmdp_a-parse_hash.Po  libmdp_a-parser.Po  libmdp_a-scanner.Po  libmdp_a-sparse-matrix.Po
src/pomdp-solve/: Makefile  belief-state.c  common.c  common.h  config-file.h  double-vector.h  fg-params.c  global.h  inc-prune.c  inc-prune.h  index-list.c  index-list.h  laspack-util.h  linear-support.c  lp-interface.h  pg-eval.c  pomdp-fg.c  pomdp-solve  pomdp-solve-options.c  pomdp-solve.c  pomdp-solve.h  program-options.c  program-options.h  projection.h  region.c  signal-handler.c  sim.h  timing.c  two-pass.c  two-pass.h  value-function.h  vertex-enum.h  zlz_speedup.c  zlz_speedup.h
src/pomdp-solve/laspack/: Makefile  Makefile.win  README  copyrght.h  eigenval.h  elcmp.h  errhandl.c  factor.h  itersolv.c  itersolv.h  matrix.h  mlsolv.h  precond.c  precond.h  rtc.h  vector.h  version.h
src/pomdp-solve/lp-solve/: Makefile  lex.l  lex.yy.c  lp.c  lp.h  lp.y  lpglob.h  lpkit.c  lpkit.h  read.c  read.h  solve.c  y.tab.c  y.tab.h
src/pomdp-solve/mdp/: Makefile  lex.yy.c  mdp.c  mdp.h  parse_err.c  parser.c  parser.h  parser.y  scanner.c  scanner.l
tests/: testthat.R
tests/testthat/: test-MDP_funcitons.R  test-MDP_functions.R  test-POMDP_accessors.R  test-cpp.R  test-matrix_extractors.R  test-read_write_POMDP.R  test-simulate.R  (+3 more)
vignettes/: POMDP.Rmd  bibliography.bib  gridworlds.Rmd  pomdp.Rmd  pomdp.bib  references.bib
